[tool.poetry]
name = "taxfree-helper-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
aiogram = "^3.15.0"
selenium = "^4.27.1"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
2captcha-python = "^1.5.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
